syntax = "proto3";

option go_package = ".;pb";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "typs.proto";

service Sample {
  // Версия
  rpc GetVersion (google.protobuf.Empty) returns (Version) {
    option (google.api.http) = {
      get: "/api/v1/version",
    };
  }
  // Sample Post - Insert
  rpc PostSample (ReqSample) returns (ResSample) {
    option (google.api.http) = {
      post: "/api/v1/gate",
      body:"*"
    };
  }
  // Sample Get - Select
  rpc GetSample (ReqSample) returns (ResSample) {
    option (google.api.http) = {
      get: "/api/v1/gate/{id}",
    };
  }
}
