syntax = "proto3";

option go_package = ".;pb";

import "google/protobuf/timestamp.proto";
import "protoc-gen-swagger/options/annotations.proto";

message Version {
  string text = 1;
}

// AFTER CODE GENERATED. DO NOT EDIT //

message ReqSample {
  string id = 1;
  string name = 2;
  string status = 3;
  google.protobuf.Timestamp date = 4;
  bool flag = 5;
  repeated string hobbit = 6;
  float weight1 = 7 [(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {type: NUMBER}];
  double weight2 = 8 [(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {type: NUMBER}];
  bytes any = 9;
  int64 number = 10 [(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {type: INTEGER}];
}

message ResSample {
  string id = 1;
  string name = 2;
  string status = 3;
  google.protobuf.Timestamp date = 4;
  bool flag = 5;
  repeated string hobbit = 6;
  float weight1 = 7 [(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {type: NUMBER}];
  double weight2 = 8 [(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {type: NUMBER}];
  bytes any = 9;
  int64 number = 10 [(grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {type: INTEGER}];
}
